--- a/standAloneJPA/src/main/resources/application.properties
+++ b/standAloneJPA/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=standAloneJPA
+spring.datasource.name = ds
+spring.datasource.url = jdbc:mysql://localhost:3306/springboot
+spring.datasource.username = root
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
